--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write --cache .",
-    "lint": "eslint --write --cache ."
+    "lint": "eslint --cache ."
   },
   "keywords": [],
   "author": "",
